# library_system

./: CMakeLists.txt  README.md  main.c
configuration/: constants.h  structure.h
configuration/bootstrap/: bootstrap.c  bootstrap.h
source/: app.c  app.h
source/auth/login/: login.c  login.h
source/helpers/fileExists/: fileExists.c  fileExists.h
source/helpers/isDateValid/: isDateValid.c  isDateValid.h
source/helpers/isNameValid/: isNameValid.c  isNameValid.h
source/style/alignToCenter/: alignToCenter.c  alignToCenter.h
source/style/header/: header.c  header.h
